Quiz page on IE have issue (bug 3169)

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Modal.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Modal.css
@@ -335,8 +335,8 @@
 }
 .itemReg .modal-header h3 {
   width: auto;
-  font-size: 22px;
-  line-height: 24px;
+  font-size: 25px;
+  line-height: 46px;
   color: #0f9d58;
   background: none;
   font-weight: bold;
