--- a/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Quiz.less
@@ -962,7 +962,7 @@ body {
     top: 16px;
 }
 .userScoreWpr {
-    margin: 20px 5px 0;
+    margin: 10px 5px 0;
     font-size: 20px;
     background: #282828;
     position: relative;
@@ -971,6 +971,8 @@ body {
     .transition(all .5s ease-in .8s);
     opacity:0;
     visibility: hidden;
+    width: 250px;
+    display: inline-block;
 }
 .userScore {
     background: #797979;
@@ -1004,6 +1006,7 @@ body {
     .btn1 {
         margin-top: 10px;
         max-width: 140px;
+        padding: 3px 5px 3px 5px;
     }
 }
 .quizTimerResult {
