--- a/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/lang.ru-RU.css
@@ -138,7 +138,7 @@
 }
 .timeRetakeWpr .btn1 {
   max-width: 120px;
-  font-size: 13px;
+  font-size: 12px;
 }
 /*#endregion*/
 /*#region invite page*/
